--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 
    <head>
+      <meta charset = "UTF-8">
       <title>React App</title>
    </head>
 
