--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang = "en">
-
    <head>
       <meta charset = "UTF-8">
-      <title>React App</title>
+      <title>itv</title>
    </head>
 
    <body>
+      
       <div id = "app"></div>
       <script src = "index.js"></script>
    </body>
-
 </html>
