--- a/testing/SpecRunner.html
+++ b/testing/SpecRunner.html
@@ -17,6 +17,9 @@
   <!-- include spec files here... -->
   <script src="spec/ApiSpec.js"></script>
 
+  <!-- jasmine Ajax plugin -->
+  <script type="text/javascript" src="mock-ajax.js"></script> 
+
 </head>
 
 <body>
